--- a/TMessagesProj/build.gradle
+++ b/TMessagesProj/build.gradle
@@ -47,6 +47,9 @@ dependencies {
     implementation 'com.google.guava:guava:31.1-android'
     implementation 'com.google.android.play:integrity:1.3.0'
     implementation 'com.google.android.gms:play-services-safetynet:18.0.1'
+    implementation 'androidx.media3:media3-cast:1.4.1'
+    implementation 'androidx.media3:media3-common:1.4.1'
+    implementation 'org.nanohttpd:nanohttpd:2.3.1'
 
     implementation 'com.google.android.gms:play-services-mlkit-subject-segmentation:16.0.0-beta1'
     implementation 'com.google.android.gms:play-services-mlkit-image-labeling:16.0.8'
